# IDIS

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  make.bat  pyproject.toml
.cursor/commands/: backtest-validate.md  bootstrap-verify.md  god-view.md  harvest-daily.md  kill-switch.md  phase0-run.md  resume-after-halt.md
.cursor/rules/: whale-hunter-v3-1-authoritative-project-rules.mdc
.github/workflows/: ci.yml
contracts/: contract_lock.json
datasets/gdbs_full/: README.md  manifest.json
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml
deploy/monitoring/: prometheus_alert_rules.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
docs/: 00_README_IDIS_Docs_v6_3.md  01_IDIS_TDD_v6_3.md  02_IDIS_Data_Model_Schema_v6_3.md  03_IDIS_LangGraph_Skeleton_v6_3.md  04_IDIS_Requirements_Backlog_v6_3.md  05_IDIS_Backend_Structure_v6_3.md  06_IDIS_Implementation_Plan_v6_3.md  07_IDIS_Tech_Stack_v6_3.md  08_IDIS_PRD_v6_3.md  09_IDIS_Frontend_Guidelines_v6_3.md  10_IDIS_GoLive_Execution_Plan_v6_3.md  11_IDIS_Traceability_Matrix_v6_3.md  12_IDIS_End_to_End_Implementation_Roadmap_v6_3.md  IDIS_ADRs_Supplemental_v6_3.md  IDIS_ADRs_v6_3.md  IDIS_API_Phased_Integration_Plan_v3_1.md  IDIS_API_and_Integration_Contracts_v6_3.md  IDIS_Architecture_Report.md  IDIS_Audit_Event_Taxonomy_v6_3.md  IDIS_COMPLETE_SYSTEM_GO_LIVE_PLAN.md  IDIS_Data_Architecture_v3_1.md  IDIS_Data_Residency_and_Compliance_Model_v6_3.md  IDIS_Enrichment_Connector_Framework_v0_1.md  IDIS_Evaluation_Harness_and_Release_Gates_v6_3.md  IDIS_FULL_LIVE_MASTER_PLAN_V2.md  IDIS_Local_Dev_Databases_Runbook_v6_3.md  IDIS_Master_Execution_Plan_v6_3.md  IDIS_Muhasabi_Prompt_Enhancement_v1.md  IDIS_OpenAPI_v6_3.yaml  IDIS_Prompt_Registry_and_Model_Policy_v6_3.md  IDIS_SLO_SLA_Runbooks_v6_3.md  IDIS_Sanad_Methodology_v2.md  IDIS_Security_Threat_Model_v6_3.md  IDIS_TDD_v6_3.md  IDIS_Technical_Infrastructure_v6_3.md  IDIS_VC_ANALYST_v6_3_01_2026_FINAL.docx  IDIS_v6_3_Traceability_Matrix.md  SLICE_56_STRICT_RUNTIME_ROADMAP.md  idis_langgraph_skeleton.py
docs/architecture/: media_model_provisioning.md  media_transcription_provisioning_decision.md  slice96_runtime_reliability.md  slice97_webhooks_lifecycle.md  slice98_byok_kms_decision.md  slice98_decisions.md  slice98_mfa_decision.md  slice99_decisions.md  slice99_metrics_mapping.md  slice99_quarantine_policy.md  strict_full_live_readiness.md
docs/dev/: NEW_PC_BOOTSTRAP.md
docs/gates/: gate3_manual_3deal_results.json  gate3_real_llm_census_v2.md  gate3_real_llm_census_v3.md  gate_3_blocked_status.json
openapi/: IDIS_OpenAPI_v6_3.yaml
prompts/: registry.yaml
schemas/: audit_event.schema.json  calc_sanad.schema.json  claim.schema.json  debate_state.schema.json  defect.schema.json  evidence_item.schema.json  muhasabah_record.schema.json  sanad.schema.json  transmission_node.schema.json  value_struct.schema.json
scripts/: add_calcs_to_adversarial.py  audit_full_system_wiring.py  bootstrap_faster_whisper_model.py  contract_lock.py  db_backup_restore.py  demo_run_with_claims.py  fix_adversarial_artifacts.py  forbidden_scan.py  gdbs_manifest_regen.py  generate_gdbs_full.py  llm_demo_one_deal.py  load_gdbs_deals.py  pg_bootstrap_ci.py  pg_init.sql  process_queued_runs.py  release_build.py  run_data_room_full_harness.py  run_gates.py  run_postgres_integration_local.py  run_real_example_gate.py
tests/: __init__.py  _postgres_support.py  abac_seed.py  conftest.py  test_abac.py  test_alert_rules.py  test_analysis_context_payload.py  test_analysis_deterministic_llm_client.py  test_analysis_engine_determinism.py  test_analysis_financial_agent_llm.py  test_analysis_historian_agent_llm.py  test_analysis_market_agent_llm.py  test_analysis_muhasabah_enforced.py  test_analysis_no_free_facts.py  test_analysis_prompt_evidence_rule.py  test_analysis_registry_fail_closed.py  test_analysis_risk_officer_agent_llm.py  test_analysis_sector_specialist_agent_llm.py  test_analysis_specialist_prompt_contract.py  test_analysis_team_agent_llm.py  test_analysis_technical_agent_llm.py  test_analysis_terms_agent_llm.py  test_anthropic_client_max_tokens.py  test_api_abac_claims.py  test_api_abac_claims_http.py  test_api_audit_events.py  test_api_audit_events_postgres.py  test_api_audit_middleware.py  test_api_claim_detail_and_sanad.py  test_api_claims_postgres.py  test_api_claims_unsupported_methods.py  test_api_db_transaction_middleware.py  test_api_deals_postgres.py  test_api_debate.py  test_api_default_upload_ingestion_postgres.py  test_api_defects.py  test_api_deliverables.py  test_api_documents.py  test_api_error_model.py  test_api_full_run_durable_evidence_postgres.py  (+428 more)
ui/: .env.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
(+1561 files in other folders)
